--- a/src/main/resources/assets/dementia/lang/de_de.json
+++ b/src/main/resources/assets/dementia/lang/de_de.json
@@ -1,4 +1,4 @@
 {
   "effect.dementia.anti_dementia": "Demenzresistenz",
-  "item.dementia.anti_dementia_pill": "Anti-Demenz-Pille"
+  "item.dementia.blue_anti_dementia_pill": "Blaue Anti-Demenz-Pille"
 }
