--- a/src/main/resources/assets/dementia/lang/pl_pl.json
+++ b/src/main/resources/assets/dementia/lang/pl_pl.json
@@ -1,4 +1,4 @@
 {
   "effect.dementia.anti_dementia": "Odporność na demencję",
-  "item.dementia.anti_dementia_pill": "Pigułka przeciw demencji"
+  "item.dementia.blue_anti_dementia_pill": "Niebieska pigułka przeciw demencji"
 }
