--- a/src/main/resources/assets/dementia/lang/ru_ru.json
+++ b/src/main/resources/assets/dementia/lang/ru_ru.json
@@ -1,4 +1,4 @@
 {
-  "effect.dementia.anti_dementia": "Стійкість до деменції",
-  "item.dementia.anti_dementia_pill": "Таблетка від деменції"
+  "effect.dementia.anti_dementia": "Устойчивость к деменции",
+  "item.dementia.blue_anti_dementia_pill": "Синяя таблетка от деменции"
 }
