--- a/src/main/resources/assets/dementia/lang/uk_ua.json
+++ b/src/main/resources/assets/dementia/lang/uk_ua.json
@@ -1,4 +1,4 @@
 {
-  "effect.dementia.anti_dementia": "Dementia resistance",
-  "item.dementia.anti_dementia_pill": "Anti-dementia pill"
+  "effect.dementia.anti_dementia": "Стійкість до деменції",
+  "item.dementia.blue_anti_dementia_pill": "Синя таблетка від деменції"
 }
