--- a/src/main/resources/assets/dementia/lang/ru_ru.json
+++ b/src/main/resources/assets/dementia/lang/ru_ru.json
@@ -1,4 +1,5 @@
 {
   "effect.dementia.anti_dementia": "Устойчивость к деменции",
-  "item.dementia.blue_anti_dementia_pill": "Синяя таблетка от деменции"
+  "item.dementia.blue_anti_dementia_pill": "Синяя таблетка от деменции",
+  "item.dementia.red_anti_dementia_pill": "Красная таблетка от деменции"
 }
