--- a/src/main/resources/assets/dementia/lang/uk_ua.json
+++ b/src/main/resources/assets/dementia/lang/uk_ua.json
@@ -1,4 +1,5 @@
 {
   "effect.dementia.anti_dementia": "Стійкість до деменції",
-  "item.dementia.blue_anti_dementia_pill": "Синя таблетка від деменції"
+  "item.dementia.blue_anti_dementia_pill": "Синя таблетка від деменції",
+  "item.dementia.red_anti_dementia_pill": "Червона таблетка від деменції"
 }
