--- a/src/main/resources/assets/dementia/lang/fr_fr.json
+++ b/src/main/resources/assets/dementia/lang/fr_fr.json
@@ -1,4 +1,5 @@
 {
   "effect.dementia.anti_dementia": "Résistance à la démence",
-  "item.dementia.anti_dementia_pill": "Pilule anti-démence"
+  "item.dementia.blue_anti_dementia_pill": "Pilule bleue anti-démence",
+  "item.dementia.red_anti_dementia_pill": "Pilule rouge anti-démence"
 }
