--- a/src/main/resources/assets/dementia/lang/be_by.json
+++ b/src/main/resources/assets/dementia/lang/be_by.json
@@ -1,4 +1,5 @@
 {
   "effect.dementia.anti_dementia": "Устойлівасць да дэменцыі",
-  "item.dementia.anti_dementia_pill": "Таблетка ад дэменцыі"
+  "item.dementia.blue_anti_dementia_pill": "Сіняя таблетка ад дэменцыі",
+  "item.dementia.red_anti_dementia_pill": "Красная таблетка ад дэменцыі"
 }
