--- a/src/main/resources/assets/dementia/lang/en_us.json
+++ b/src/main/resources/assets/dementia/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "effect.dementia.anti_dementia": "Dementia resistance",
-  "item.dementia.anti_dementia_pill": "Anti-dementia pill"
+  "item.dementia.blue_anti_dementia_pill": "Blue Anti-dementia pill",
+  "item.dementia.red_anti_dementia_pill": "Red Anti-dementia pill"
 }
