--- a/src/main/resources/assets/dementia/lang/es_es.json
+++ b/src/main/resources/assets/dementia/lang/es_es.json
@@ -1,4 +1,5 @@
 {
   "effect.dementia.anti_dementia": "Resistencia a la demencia",
-  "item.dementia.anti_dementia_pill": "Pastilla contra la demencia"
+  "item.dementia.blue_anti_dementia_pill": "Pastilla azul contra la demencia",
+  "item.dementia.red_anti_dementia_pill": "Pastilla roja contra la demencia"
 }
