--- a/src/main/resources/assets/dementia/lang/it_it.json
+++ b/src/main/resources/assets/dementia/lang/it_it.json
@@ -1,4 +1,5 @@
 {
   "effect.dementia.anti_dementia": "Resistenza alla demenza",
-  "item.dementia.anti_dementia_pill": "Pillola antidemenza"
+  "item.dementia.blue_anti_dementia_pill": "Pillola blu antidemenza",
+  "item.dementia.red_anti_dementia_pill": "Pillola rossa antidemenza"
 }
