--- a/src/main/resources/assets/dementia/lang/tr_tr.json
+++ b/src/main/resources/assets/dementia/lang/tr_tr.json
@@ -1,4 +1,5 @@
 {
   "effect.dementia.anti_dementia": "Demans direnci",
-  "item.dementia.anti_dementia_pill": "Demans önleyici hap"
+  "item.dementia.blue_anti_dementia_pill": "Mavi Demans önleyici hap",
+  "item.dementia.red_anti_dementia_pill": "Kırmızı Anti-demans hapı"
 }
